--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,8 @@ bind l select-pane -R
 # reload config file from tmux
 bind r source-file ~/.tmux.conf
 
-# disable mouse mode
+# enable mouse mode
+set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -46,3 +47,15 @@ set -g visual-silence on
 setw -g monitor-activity on
 set -g bell-action none
 
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+set -g @dracula-fixed-location "Amsterdam"
+set -g @dracula-plugins "weather git"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+set -g status-position top
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
