--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,8 +8,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # easy-to-remember split pane commands
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -51,11 +51,18 @@ set -g bell-action none
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true 
 set -g @dracula-fixed-location "Amsterdam"
-set -g @dracula-plugins "weather git"
+set -g @dracula-plugins "time git"
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
 set -g status-position top
+
+# Set Tmux to use 256 colors
+set -g default-terminal "xterm-256color"
+
+# Enable true color support
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
