--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,41 +28,35 @@ set -g mouse on
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# for neovim
+set -sg escape-time 10
+
+# vi for copy mode
+setw -g mode-keys vi
 
 ####################################
 ###         DESIGN CHANGES       ###
 ####################################
 
+# status bar
+set -g status-right "#(pomo)"
+set -g status-style "fg=#665c54"
+set -g status-left-style "fg=#928374"
 
-#start with window 1 (instead of 0)
+set -g status-bg default
+set -g status-position top
+set -g status-interval 1
+set -g status-left ""
+
+# disable status
+# set -g status off
+# set -g status on
+
+# count the panes and window from 1
 set -g base-index 1
+setw -g pane-base-index 1
 
 # history
-set -g history-limit 4096
+set -g history-limit 25000
 
-# Indicators
-set -g visual-activity on
-set -g visual-bell on
-set -g visual-silence on
-setw -g monitor-activity on
-set -g bell-action none
-
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-powerline true 
-set -g @dracula-fixed-location "Amsterdam"
-set -g @dracula-plugins "time git"
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
-set -g status-position top
-
-# Set Tmux to use 256 colors
-set -g default-terminal "xterm-256color"
-
-# Enable true color support
-set -ga terminal-overrides ",xterm-256color:Tc"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set-option -g default-terminal "screen-256color"
