--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,4 +59,4 @@ setw -g pane-base-index 1
 # history
 set -g history-limit 25000
 
-set-option -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
