--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 # Windows file that needs to be stored in C:\Users\bram_\AppData\Roaming\alacritty
-# themes from https://github.com/alacritty/alacritty-theme
 
-import = ["/Users/mischa/.config/alacritty/themes/themes/gruvbox_dark.toml"]
+[env]
+TERM = "xterm-256color"
 
 [font]
 size = 18
